--- a/Landing-page.html
+++ b/Landing-page.html
@@ -170,7 +170,7 @@
     <div class="mb-[100px]">
         <div class="flex items-center justify-center my-[20px]">
             <a href="" class="text-[#0065C1] text-[20px] font-[600] mr-3">Kunjungi Etalase Kuy</a>
-            <img src="./assets/i-arrow.png" alt="arrow-kuy" class="w-[30px]">
+            <img src="./assets/i-arrow.png" alt="arrow-kuy" class="w-[1.875rem]">
         </div>
 
         <div class="flex flex-wrap justify-center">
@@ -182,7 +182,7 @@
                 </div>
                 <div class="flex px-[10px] absolute detail">
                     <a href="" class="text-[#0065C1] text-[16px] font-[600]">Lihat Detail</a>
-                    <img src="./assets/i-arrow.png" alt="icon-arrow-kuy" class="w-[24px]">
+                    <img src="./assets/i-arrow.png" alt="icon-arrow-kuy" class="w-[1.5rem]">
                 </div>
             </div>
 
@@ -194,7 +194,7 @@
                 </div>
                 <div class="flex px-[10px] absolute detail">
                     <a href="" class="text-[#0065C1] text-[16px] font-[600]">Lihat Detail</a>
-                    <img src="./assets/i-arrow.png" alt="icon-arrow-kuy" class="w-[24px]">
+                    <img src="./assets/i-arrow.png" alt="icon-arrow-kuy" class="w-[1.5rem]">
                 </div>
             </div>
 
@@ -206,7 +206,7 @@
                 </div>
                 <div class="flex px-[10px] absolute detail">
                     <a href="" class="text-[#0065C1] text-[16px] font-[600]">Lihat Detail</a>
-                    <img src="./assets/i-arrow.png" alt="icon-arrow-kuy" class="w-[24px]">
+                    <img src="./assets/i-arrow.png" alt="icon-arrow-kuy" class="w-[1.5rem]">
                 </div>
             </div>
         </div>
