add cek paket page

--- a/Login.html
+++ b/Login.html
@@ -31,11 +31,17 @@
 </div>
 
 <div class="flex">
-    <div class="flex flex-col">
-        <p>Registrasi</p>
-
+    <div class="flex flex-col w-[347px]">
+        <p class="text-[36px] font-[600]">Registrasi</p>
         <label for="nama">Nama</label>
-        <input type="text" name="" id="">
+        <input type="text" name="nama" id="nama" class="border border-[#ABABAB] rounded-md p-2 w-[355px]" placeholder="Nama Anda">
+
+        <label for="ttl">Tanggal Lahir</label>
+        <div class="flex">
+            <input type="text" name="tanggal" id="tanggal" class="border border-[#ABABAB] rounded-md p-2 w-[113px] mr-2" placeholder="Tanggal">
+            <input type="text" name="tanggal" id="tanggal" class="border border-[#ABABAB] rounded-md p-2 w-[113px] mr-2" placeholder="Bulan">
+            <input type="text" name="tanggal" id="tanggal" class="border border-[#ABABAB] rounded-md p-2 w-[113px]" placeholder="Hari">
+        </div>
     </div>
 </div>
 
