adjusted and add: profile page

--- a/Cakupan-wilayah.html
+++ b/Cakupan-wilayah.html
@@ -19,9 +19,9 @@
         </div>
 
         <div class="right-content ml-2 flex space-x-[34px]">
-            <div class="bg-[#2D71B4] text-white text-[16px] font-[600] rounded-md py-[6px] px-[16px] flex flex-row items-center gap-2">
+            <div class="bg-[#2D71B4] text-white text-[16px] font-[600] rounded-md py-[6px] px-[16px] flex flex-row items-center">
                 <img src="./assets/i-download.png" alt="download-app-kuy" class="w-[15.702px] h-[15.702px]">
-                <a href="#">
+                <a href="#" class="ml-2">
                     Download Apps
                 </a>
             </div>
