--- a/Landing-page.html
+++ b/Landing-page.html
@@ -18,9 +18,9 @@
         </div>
 
         <div class="right-content ml-2 flex space-x-[34px]">
-            <div class="bg-[#2D71B4] text-white text-[16px] font-[600] rounded-md py-[6px] px-[16px] flex flex-row items-center gap-2">
+            <div class="bg-[#2D71B4] text-white text-[16px] font-[600] rounded-md py-[6px] px-[16px] flex flex-row items-center">
                 <img src="./assets/i-download.png" alt="download-app-kuy" class="w-[15.702px] h-[15.702px]">
-                <a href="#">
+                <a href="#" class="ml-2">
                     Download Apps
                 </a>
             </div>
@@ -264,12 +264,12 @@
     <div class="flex flex-wrap mb-[100px] justify-center">
         <div class="flex flex-col mr-[20px]">
             <p class="text-[#0065C1] text-[40px] font-[600]">Cari Tiket Bus & Travel?</p>
-            <p class="max-w-[563px] text-[#5F5F5F] font-[400] text-[18px] mb-[26px]">Ada banyak pilihan shuttle/travel terbaik dengan rute terlengkap untuk teman perjalanan kamu</p>
+            <p class="max-w-[563px] text-[#5F5F5F] font-[400] text-[18px] mb-[20px]">Ada banyak pilihan shuttle/travel terbaik dengan rute terlengkap untuk teman perjalanan kamu</p>
             <button class="bg-[#2D71B4] text-white rounded-md text-[18px] font-[600] px-[16px] py-[12px] mr-[8px] max-w-[207px]">Kunjungi Sekarang</button>
         </div>
 
         <div class="">
-            <img src="./assets/diskon.jpeg" alt="diskon-kuy" class="max-w-[540.5px] rounded-md">
+            <img src="./assets/diskon.jpeg" alt="diskon-kuy" class="max-w-[540.5px] h-[190px] rounded-md">
         </div>
     </div>
 
@@ -291,7 +291,7 @@
         <div class="flex flex-col">
             <p class="text-black text-[18px] font-[600] pb-[20px]">Informasi Kontak</p>
             <div class="flex">
-                <img src="./assets/i-whatsapp.png" alt="icon-whatsapp-kuy" class="w-[1.493rem] mr-[10px]">
+                <img src="./assets/i-whatsapp.png" alt="icon-whatsapp-kuy" class="w-[30px] mr-[10px]">
                 <span class="text-[#5F5F5F]">0818-0400-4058</span>
             </div>
         </div>
