--- a/Landing-page.html
+++ b/Landing-page.html
@@ -182,7 +182,7 @@
                 </div>
                 <div class="flex px-[10px] absolute detail">
                     <a href="" class="text-[#0065C1] text-[16px] font-[400]">Lihat Detail</a>
-                    <img src="./assets/i-arrow.png" alt="icon-arrow-kuy" class="w-[1.5rem]">
+                    <img src="./assets/i-arrow.png" alt="icon-arrow-kuy" class="w-[1.5rem] h-[1.5rem]">
                 </div>
             </div>
 
@@ -194,7 +194,7 @@
                 </div>
                 <div class="flex px-[10px] absolute detail">
                     <a href="" class="text-[#0065C1] text-[16px] font-[400]">Lihat Detail</a>
-                    <img src="./assets/i-arrow.png" alt="icon-arrow-kuy" class="w-[1.5rem]">
+                    <img src="./assets/i-arrow.png" alt="icon-arrow-kuy" class="w-[1.5rem] h-[1.5rem]">
                 </div>
             </div>
 
@@ -206,7 +206,7 @@
                 </div>
                 <div class="flex px-[10px] absolute detail">
                     <a href="" class="text-[#0065C1] text-[16px] font-[400]">Lihat Detail</a>
-                    <img src="./assets/i-arrow.png" alt="icon-arrow-kuy" class="w-[1.5rem]">
+                    <img src="./assets/i-arrow.png" alt="icon-arrow-kuy" class="w-[1.5rem] h-[1.5rem]">
                 </div>
             </div>
         </div>
@@ -219,7 +219,9 @@
             <p class="text-[#5F5F5F] text-[18px] font-[400]">Nantikan update terbaru dari kami</p>
         </div>
 
-       <a href=""><p class=" flex items-end text-[#0065C1] text-[20px] font-[600]">Lihat Semua</p></a>
+        <div class="flex items-end">
+            <a href=""><p class="text-[#0065C1] text-[20px] font-[600]">Lihat Semua</p></a>
+        </div>
     </div>
 
     <div class="flex flex-wrap justify-center mb-[100px] ">
@@ -291,7 +293,7 @@
         <div class="flex flex-col">
             <p class="text-black text-[18px] font-[600] pb-[20px]">Informasi Kontak</p>
             <div class="flex">
-                <img src="./assets/i-whatsapp.png" alt="icon-whatsapp-kuy" class="w-[30px] mr-[10px]">
+                <img src="./assets/i-whatsapp.png" alt="icon-whatsapp-kuy" class="w-[23px] h-[23px] mr-[10px]">
                 <span class="text-[#5F5F5F]">0818-0400-4058</span>
             </div>
         </div>
