--- a/Landing-page.html
+++ b/Landing-page.html
@@ -11,7 +11,7 @@
     <!-- navbar -->
     <div class="navbar bg-white py-[11px] flex items-center justify-around">
         <div class="left-content text-[#2D71B4] font-[600] flex justify-content-center items-center space-x-[34px]">
-            <img src="./assets/nav-logo.jpeg" alt="logo-kuy" class="w-[162px]">
+            <a href="./Landing-page.html"><img src="./assets/nav-logo.jpeg" alt="logo-kuy" class="w-[162px]"></a>
             <a href="./Landing-page.html">Beranda</a>
             <a href="./Cek-paket.html">Cek Paket</a>
             <a href="./Cakupan-wilayah.html">Cakupan Wilayah</a>
@@ -278,7 +278,7 @@
     <!-- footer -->
     <div class="bg-[#E2F7FC] flex flex-wrap justify-evenly pt-[65px] pb-[50px]">
         <div class="flex flex-wrap flex-col mr-[60px]">
-            <img src="./assets/logo-footer.png" alt="logo-kuy" class="max-w-[285px]">
+            <a href="./Landing-page.html"><img src="./assets/logo-footer.png" alt="logo-kuy" class="max-w-[285px]"></a>
             <p class="text-black text-[18px] font-[600] mt-[20px]">Download aplikasinya di</p>
             <img src="./assets/googleplaystore.png" alt="icon-google-lay-kuy" class="w-[229px] mt-2">
         </div>
