add jenis jenis pengiriman pages

--- a/Pilih-jenis-pengiriman.html
+++ b/Pilih-jenis-pengiriman.html
@@ -36,7 +36,7 @@
         <hr class="w-[640px] border border-[#2D71B4] mb-[30px]">
         <div class="flex">
 
-            <a href="./1-pengirim-1-penerima/1pengirim-1penerima.html">
+            <a href="./1 pengirim 1 penerima/1pengirim-1penerima.html">
                 <div class="bg-[#A5A5A5] p-[20px] rounded-lg text-white font-[600] text-justify hover:bg-[#2D71B4] cursor-pointer mr-[20px] w-[283px] h-[231px]">
                     <div class="h-[123px] bg-white rounded-lg">
                         <img src="./assets/pengiriman/one-to-one.png" alt="assets-kuy" class=" p-[16px]">
@@ -45,7 +45,7 @@
                 </div>
             </a>
 
-            <a href="">
+            <a href="./banyak pengirim ke satu penerima/data-pengirim.html">
                 <div class="bg-[#A5A5A5] p-[20px] rounded-lg text-white font-[600] text-justify hover:bg-[#2D71B4] cursor-pointer mr-[20px] w-[283px] h-[231px]">
                     <div class="h-[123px] bg-white rounded-lg">
                         <img src="./assets/pengiriman/one-to-many.png" alt="assets-kuy" class=" p-[16px]">
