--- a/1 pengirim ke banyak penerima/konfirmasi-pesanan.html
+++ b/1 pengirim ke banyak penerima/konfirmasi-pesanan.html
@@ -34,12 +34,12 @@
 
     
     <div class="flex flex-col justify-center items-center mt-[50px]">
-        <p class="text-[#2D71B4] text-[40px] font-[600] mb-[10px]">1 Pengirim ke 1 Penerima</p>   
+        <p class="text-[#2D71B4] text-[40px] font-[600] mb-[10px]">1 Pengirim ke Banyak Penerima</p>   
         <hr class="w-[852px] border border-[#2D71B4] mb-[10px]">
         <div class="flex flex-row">
             <a href="./1pengirim-1penerima.html">
                 <div class="flex bg-[#2D71B4] rounded-3xl text-white p-[6px] mr-[20px] justify-center items-center">
-                    <p class="mr-[9px] bg-white text-[#2D71B4] py-[5px] px-[12px] rounded-full">1</p>
+                    <p class="mr-[9px] bg-white text-[#2D71B4] py-[5px] px-[14px] rounded-full">1</p>
                     <p class="pr-[9px]">Data Pengirim</p>
                 </div>
             </a>
