--- a/1 pengirim ke banyak penerima/data-penerima.html
+++ b/1 pengirim ke banyak penerima/data-penerima.html
@@ -121,8 +121,8 @@
             <div class="flex">
                 <div class="w-[343px] h-[98px] border border-[#2D71B4] rounded-md px-[10px] py-[6px] my-[20px] flex relative">
                     <div class="flex flex-col">
-                        <p class="text-[12px]">Perlindungan ekstra</p>
-                        <p class="text-[#5F5F5F] text-[10px] w-[229px]">Perlindungna lebih untuk mengamankan paket kamu</p>
+                        <p class="text-[12px]">Pilih Ukuran Barang</p>
+                        <p class="text-[#5F5F5F] text-[10px] w-[229px]">Pilih ukuran barang yang ingin di kirimkan</p>
 
                         <button class="w-[66px] border border-[#2D71B4] rounded-3xl mt-[10px] text-[#2D71B4] text-[12px]">Pilih</button>
                     </div>
@@ -172,7 +172,7 @@
 
                     <div class="flex flex-col justify-end">
                         <img src="../assets/pengiriman/Ellipse.png" alt="icon-ellipse-kuy" class="absolute right-0 bottom-0 rounded-br-md">
-                        <img src="../assets/pengiriman/dus.png" alt="icon-perlindungan-kuy" class="w-[52.723px] h-[53px] absolute top-1 right-3">
+                        <img src="../assets/pengiriman/Perlindungan.png" alt="icon-perlindungan-kuy" class="w-[30.723px] h-[41px] absolute top-1 right-3">
                     </div>
                 </div>
             </div>
