--- a/1 pengirim 1 penerima/1pengirim-1penerima.html
+++ b/1 pengirim 1 penerima/1pengirim-1penerima.html
@@ -4,6 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.tailwindcss.com"></script>
+        <!-- Tailwind elements -->
+        <link
+            href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900&display=swap"
+            rel="stylesheet" />
+        <link
+            rel="stylesheet"
+            href="https://cdn.jsdelivr.net/npm/tw-elements/dist/css/tw-elements.min.css" />
+            <script src="https://cdn.tailwindcss.com/3.3.0"></script>
+            <script>
+                tailwind.config = {
+                    darkMode: "class",
+                    theme: {
+                    },
+                    corePlugins: {
+                    preflight: false,
+                    },
+                };
+            </script>
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
@@ -59,7 +77,7 @@
     <div class="p-[30px] mt-[20px] text-[14px] font-[600] flex justify-center rounded-md">
         <div class="flex flex-col justify-center bg-white p-[30px] rounded-lg">
             <div class="flex mb-[10px]">
-                <img src="../assets/pengiriman/Pengirim.png" alt="icon-pengirim-kuy">
+                <img src="../assets/pengiriman/Pengirim.png" alt="icon-pengirim-kuy" class="w-[36px] h-[36px]">
                 <p class="text-[24px] font-[600] ml-[10px] ">Detail Pengirim</p>
             </div>
 
@@ -119,8 +137,8 @@
             <div class="flex">
                 <div class="w-[343px] h-[98px] border border-[#2D71B4] rounded-md px-[10px] py-[6px] my-[20px] flex relative">
                     <div class="flex flex-col">
-                        <p class="text-[12px]">Perlindungan ekstra</p>
-                        <p class="text-[#5F5F5F] text-[10px] w-[229px]">Perlindungna lebih untuk mengamankan paket kamu</p>
+                        <p class="text-[12px]">Pilih Ukuran Barang</p>
+                        <p class="text-[#5F5F5F] text-[10px] w-[229px]">Pilih ukuran barang yang ingin di kirimkan</p>
 
                         <button class="w-[66px] border border-[#2D71B4] rounded-3xl mt-[10px] text-[#2D71B4] text-[12px]">Pilih</button>
                     </div>
@@ -170,7 +188,7 @@
 
                     <div class="flex flex-col justify-end">
                         <img src="../assets/pengiriman/Ellipse.png" alt="icon-ellipse-kuy" class="absolute right-0 bottom-0 rounded-br-md">
-                        <img src="../assets/pengiriman/dus.png" alt="icon-perlindungan-kuy" class="w-[52.723px] h-[53px] absolute top-1 right-3">
+                        <img src="../assets/pengiriman/Perlindungan.png" alt="icon-perlindungan-kuy" class="w-[30.723px] h-[41px] absolute top-1 right-3">
                     </div>
                 </div>
             </div>
@@ -183,5 +201,8 @@
         </div>
     </div>
 </div>
+
+<!-- tailwind elements -->
+<script src="https://cdn.jsdelivr.net/npm/tw-elements/dist/js/tw-elements.umd.min.js"></script>
 </body>
 </html>
