--- a/banyak pengirim ke satu penerima/data-pengirim.html
+++ b/banyak pengirim ke satu penerima/data-pengirim.html
@@ -118,9 +118,11 @@
 
             <div class="flex">
                 <div class="w-[343px] h-[98px] border border-[#2D71B4] rounded-md px-[10px] py-[6px] my-[20px] flex relative">
-                    <div class="flex flex-col">
-                        <p class="text-[12px]">Pilih Ukuran Barang</p>
-                        <p class="text-[#5F5F5F] text-[10px] w-[229px]">Pilih ukuran barang yang ingin di kirimkan</p>
+                    <div class="flex flex-col justify-between">
+                        <div class="flex-col flex">
+                            <p class="text-[12px]">Pilih Ukuran Barang</p>
+                            <p class="text-[#5F5F5F] text-[10px] w-[229px]">Pilih ukuran barang yang ingin di kirimkan</p>
+                        </div>
 
                         <button class="w-[66px] border border-[#2D71B4] rounded-3xl mt-[10px] text-[#2D71B4] text-[12px]">Pilih</button>
                     </div>
