--- a/banyak pengirim ke satu penerima/data-pengirim.html
+++ b/banyak pengirim ke satu penerima/data-pengirim.html
@@ -30,10 +30,10 @@
     <!-- navbar -->
     <div class="navbar bg-white py-[11px] flex items-center justify-around">
         <div class="left-content text-[#2D71B4] font-[600] flex justify-content-center items-center space-x-[34px]">
-            <a href="./Landing-page.html"><img src="../assets/nav-logo.jpeg" alt="logo-kuy" class="w-[162px]"></a>
-            <a href="./Landing-page.html">Beranda</a>
-            <a href="./Cek-paket.html">Cek Paket</a>
-            <a href="./Cakupan-wilayah.html">Cakupan Wilayah</a>
+            <a href="../Landing-page.html"><img src="../assets/nav-logo.jpeg" alt="logo-kuy" class="w-[162px]"></a>
+            <a href="../Landing-page.html">Beranda</a>
+            <a href="../Cek-paket.html">Cek Paket</a>
+            <a href="../Cakupan-wilayah.html">Cakupan Wilayah</a>
         </div>
 
         <div class="right-content ml-2 flex space-x-[34px]">
