--- a/Cakupan-wilayah.html
+++ b/Cakupan-wilayah.html
@@ -69,7 +69,10 @@
 
         <div class="flex flex-row mt-[30px] mb-[50px]">
             <div class="flex flex-col w-[347px] mr-[65px]">
-                <button class="bg-[#2D71B4] text-white rounded-md py-[12px] mb-[14px]">Reservasi Sekarang</button>
+                <a href="./Pilih-jenis-pengiriman.html">
+                    <button class="bg-[#2D71B4] text-white rounded-md py-[12px] mb-[14px]">Reservasi Sekarang</button>
+                </a>
+
                 <button class="bg-[#079849] text-white rounded-md py-[12px]">Whatsapp</button> 
             </div>
 
