--- a/Cakupan-wilayah.html
+++ b/Cakupan-wilayah.html
@@ -8,7 +8,7 @@
     <title>Cakupan Wilayah</title>
 </head>
 <body>
-<div class="bg-[#F7F7F8] container">
+<div class="bg-[#F7F7F8]">
     <!-- navbar -->
     <div class="navbar bg-white py-[11px] flex items-center justify-around">
         <div class="left-content text-[#2D71B4] font-[600] flex justify-content-center items-center space-x-[34px]">
@@ -69,8 +69,8 @@
 
         <div class="flex flex-row mt-[30px] mb-[50px]">
             <div class="flex flex-col w-[347px] mr-[65px]">
-                <a href="./Pilih-jenis-pengiriman.html">
-                    <button class="bg-[#2D71B4] text-white rounded-md py-[12px] mb-[14px]">Reservasi Sekarang</button>
+                <a href="./Pilih-jenis-pengiriman.html" class="bg-[#2D71B4] text-white rounded-md py-[12px] mb-[14px] text-center">
+                    <button class="">Reservasi Sekarang</button>
                 </a>
 
                 <button class="bg-[#079849] text-white rounded-md py-[12px]">Whatsapp</button> 
