--- a/Landing-page.html
+++ b/Landing-page.html
@@ -105,8 +105,8 @@
             <span class="text-[#2D71B4] text-[40px] font-[600]">Layanan Kita</span>
             <span class="text-[#5F5F5F] text-[17px] font-[400]">KUY reservasi dan kirim paketmu sekarang juga!</span>
 
-            <a href="./Pilih-jenis-pengiriman.html">
-                <button class="bg-[#2D71B4] text-white rounded-md py-[12px] mb-[14px] mt-[15px]">Reservasi Sekarang</button>
+            <a href="./Pilih-jenis-pengiriman.html" class="bg-[#2D71B4] text-white rounded-md py-[12px] mb-[14px] text-center mt-[12px]">
+                <button class="">Reservasi Sekarang</button>
             </a>
             <button class="bg-[#079849] text-white rounded-md py-[12px]">Whatsapp</button> 
         </div>
