--- a/Pilih-jenis-pengiriman.html
+++ b/Pilih-jenis-pengiriman.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-<div class="">
+<div class="bg-[#F7F7F8] pb-[200px]">
     <!-- navbar -->
     <div class="navbar bg-white py-[11px] flex items-center justify-around">
         <div class="left-content text-[#2D71B4] font-[600] flex justify-content-center items-center space-x-[34px]">
