--- a/Pilih-jenis-pengiriman.html
+++ b/Pilih-jenis-pengiriman.html
@@ -45,7 +45,7 @@
                 </div>
             </a>
 
-            <a href="./banyak pengirim ke satu penerima/data-pengirim.html">
+            <a href="./1 pengirim ke banyak penerima/data-pengirim.html">
                 <div class="bg-[#A5A5A5] p-[20px] rounded-lg text-white font-[600] text-justify hover:bg-[#2D71B4] cursor-pointer mr-[20px] w-[283px] h-[231px]">
                     <div class="h-[123px] bg-white rounded-lg">
                         <img src="./assets/pengiriman/one-to-many.png" alt="assets-kuy" class=" p-[16px]">
@@ -54,7 +54,7 @@
                 </div>
             </a>
 
-            <a href="">
+            <a href="./banyak pengirim ke satu penerima/data-pengirim.html">
                 <div class="bg-[#A5A5A5] p-[20px] rounded-lg text-white font-[600] text-justify hover:bg-[#2D71B4] cursor-pointer mr-[20px] w-[283px] h-[231px]">
                     <div class="h-[123px] bg-white rounded-lg">
                         <img src="./assets/pengiriman/many-to-one.png" alt="assets-kuy" class=" p-[16px]">
