--- a/banyak pengirim ke satu penerima/konfirmasi-pesanan.html
+++ b/banyak pengirim ke satu penerima/konfirmasi-pesanan.html
@@ -77,7 +77,7 @@
         </div>
     </div>
 
-    <div class="p-[30px] mt-[20px] text-[14px] font-[600] flex justify-center ">
+    <div class="p-[30px] mt-[20px] text-[14px] font-[600] flex justify-center text-[#000000]">
         <div class="flex flex-col justify-center bg-white rounded-lg w-[837px] border border-[#E7E7E7]">
             <div class="bg-[#2D71B4] text-white rounded-t-lg py-[14px] px-[30px]">
                 <p>Konfirmasi Pesanan</p>
@@ -236,7 +236,7 @@
                 </div>
             </div>
             </div>
-            </div>  
+    </div>  
     </div>
     </div>
 </div>
