add modal metode  pembayaran

--- a/1 pengirim ke banyak penerima/konfirmasi-pesanan.html
+++ b/1 pengirim ke banyak penerima/konfirmasi-pesanan.html
@@ -131,5 +131,10 @@
         </div>
     </div>
 </div>
+
+
+
+<!-- tailwind elements -->
+<script src="https://cdn.jsdelivr.net/npm/tw-elements/dist/js/tw-elements.umd.min.js"></script>
 </body>
 </html>
