--- a/banyak pengirim ke satu penerima/data-pengirim.html
+++ b/banyak pengirim ke satu penerima/data-pengirim.html
@@ -96,7 +96,7 @@
                 </div>
                 <div class="flex flex-col w-[343px] ml-[20px]">
                     <label for="namaPengirim">Nama Pengirim</label>
-                    <input type="text" name="namaPengirim" id="namaPengirim" placeholder="08xxxxx" class="border border-[#E7E7E7] rounded-md px-[10px] py-[5px] mt-2">
+                    <input type="text" name="namaPengirim" id="namaPengirim" placeholder="Isi Nama" class="border border-[#E7E7E7] rounded-md px-[10px] py-[5px] mt-2">
                 </div>
             </div>
 
