--- a/1 pengirim 1 penerima/1pengirim-1penerima.html
+++ b/1 pengirim 1 penerima/1pengirim-1penerima.html
@@ -96,7 +96,7 @@
                 </div>
                 <div class="flex flex-col w-[343px] ml-[20px]">
                     <label for="namaPengirim">Nama Pengirim</label>
-                    <input type="text" name="namaPengirim" id="namaPengirim" placeholder="08xxxxx" class="border border-[#E7E7E7] rounded-md px-[10px] py-[5px] mt-2">
+                    <input type="text" name="namaPengirim" id="namaPengirim" placeholder="Isi Nama" class="border border-[#E7E7E7] rounded-md px-[10px] py-[5px] mt-2">
                 </div>
             </div>
 
@@ -707,7 +707,7 @@
                         <p class="text-[12px] text-[#676767] font-[400] py-[10px] px-[16px]">Jl. Purbasari No.19, Cipageran, Cimahi Utara, Kota Cimahi, Jawa Barat.</p>
                     </div>
                 </div>
-                
+
                 <div class="flex mb-[10px]">
                     <div class="border border-[#EAEAEA] rounded-lg mr-[10px] w-[332px]">
                         <p class="text-[12px] text-[#676767] font-[400] py-[10px] px-[16px]">Jl. Purbasari No.19, Cipageran, Cimahi Utara, Kota Cimahi, Jawa Barat.</p>
