--- a/banyak pengirim ke satu penerima/data-penerima.html
+++ b/banyak pengirim ke satu penerima/data-penerima.html
@@ -136,7 +136,7 @@
 
             <div class="flex justify-end">
                 <a href="./konfirmasi-pesanan.html">
-                    <button class="bg-[#EEEEEE] p-[10px] w-[122px] rounded-lg font-[600]">Lanjut</button>
+                    <button class="bg-[#EEEEEE] p-[10px] w-[122px] rounded-lg font-[600] hover:bg-[#2D71B4] hover:text-white">Lanjut</button>
                 </a>
             </div>
         </div>
