--- a/1 pengirim 1 penerima/data-penerima.html
+++ b/1 pengirim 1 penerima/data-penerima.html
@@ -136,7 +136,7 @@
 
             <div class="flex justify-end">
                 <a href="./konfirmasi-pesanan.html">
-                    <button class="bg-[#EEEEEE] p-[10px] w-[122px] rounded-lg font-[600]">Lanjut</button>
+                    <button class="bg-[#EEEEEE] p-[10px] w-[122px] rounded-lg font-[600] hover:bg-[#2D71B4] hover:text-white">Lanjut</button>
                 </a>
             </div>
         </div>
@@ -268,7 +268,7 @@
         </div>
     </div>
     </div>
-    
+
 <!-- tailwind elements -->
 <script src="https://cdn.jsdelivr.net/npm/tw-elements/dist/js/tw-elements.umd.min.js"></script>
 </body>
