--- a/1 pengirim ke banyak penerima/data-pengirim.html
+++ b/1 pengirim ke banyak penerima/data-pengirim.html
@@ -77,7 +77,7 @@
     <div class="p-[30px] mt-[20px] text-[14px] font-[600] flex justify-center rounded-md">
         <div class="flex flex-col justify-center bg-white p-[30px] rounded-lg">
             <div class="flex mb-[10px]">
-                <img src="../assets/pengiriman/Pengirim.png" alt="icon-penerima-kuy">
+                <img src="../assets/pengiriman/Pengirim.png" alt="icon-penerima-kuy" class="w-[36px] h-[36px]">
                 <p class="text-[24px] font-[600] ml-[10px] ">Detail Pengirim</p>
             </div>
 
@@ -136,7 +136,7 @@
 
             <div class="flex justify-end">
                 <a href="./data-penerima.html">
-                    <button class="bg-[#EEEEEE] p-[10px] w-[122px] rounded-lg font-[600]">Lanjut</button>
+                    <button class="bg-[#EEEEEE] p-[10px] w-[122px] rounded-lg font-[600] hover:bg-[#2D71B4] hover:text-white">Lanjut</button>
                 </a>
             </div>
         </div>
