--- a/banyak pengirim ke satu penerima/data-pengirim.html
+++ b/banyak pengirim ke satu penerima/data-pengirim.html
@@ -230,7 +230,7 @@
 
             <div class="flex justify-end mt-[60px]">
                 <a href="./data-penerima.html">
-                    <button class="bg-[#EEEEEE] p-[10px] w-[122px] rounded-lg font-[600]">Lanjut</button>
+                    <button class="bg-[#EEEEEE] p-[10px] w-[122px] rounded-lg font-[600] hover:bg-[#2D71B4] hover:text-white">Lanjut</button>
                 </a>
             </div>
 
