--- a/1 pengirim 1 penerima/konfirmasi-pesanan.html
+++ b/1 pengirim 1 penerima/konfirmasi-pesanan.html
@@ -76,7 +76,7 @@
         </div>
     </div>
 
-    <div class="p-[30px] mt-[20px] text-[14px] font-[600] flex justify-center ">
+    <div class="p-[30px] mt-[20px] text-[14px] font-[600] flex justify-center text-[#000000]">
         <div class="flex flex-col justify-center bg-white rounded-lg w-[837px] border border-[#E7E7E7]">
             <div class="bg-[#2D71B4] text-white rounded-t-lg py-[14px] px-[30px]">
                 <p>Konfirmasi Pesanan</p>
@@ -128,7 +128,7 @@
                             <p class="text-[14px] font-[500]">14:00   13 Desember</p>
                         </div>
 
-                        <div class="bg-[#FF0F0F] px-[10px] items-center flex text-white h-[75px] rounded-r-lg">
+                        <div class="bg-[#FF0F0F] px-[10px] items-center flex text-white h-[75px] rounded-r-lg cursor-pointer">
                             <p>Hapus</p>
                         </div>
                     </div>
