--- a/1 pengirim ke banyak penerima/data-pengirim.html
+++ b/1 pengirim ke banyak penerima/data-pengirim.html
@@ -74,7 +74,7 @@
         </div>
     </div>
 
-    <div class="p-[30px] mt-[20px] text-[14px] font-[600] flex justify-center rounded-md">
+    <div class="p-[30px] mt-[20px] text-[14px] font-[600] flex justify-center rounded-md text-[#000000]">
         <div class="flex flex-col justify-center bg-white p-[30px] rounded-lg">
             <div class="flex mb-[10px]">
                 <img src="../assets/pengiriman/Pengirim.png" alt="icon-penerima-kuy" class="w-[36px] h-[36px]">
@@ -96,7 +96,7 @@
                 </div>
                 <div class="flex flex-col w-[343px] ml-[20px]">
                     <label for="namaPenerima">Nama Penerima</label>
-                    <input type="text" name="namaPenerima" id="namaPenerima" placeholder="08xxxxx" class="border border-[#E7E7E7] rounded-md px-[10px] py-[5px] mt-2">
+                    <input type="text" name="namaPenerima" id="namaPenerima" placeholder="Isi Nama" class="border border-[#E7E7E7] rounded-md px-[10px] py-[5px] mt-2">
                 </div>
             </div>
 
