--- a/1 pengirim ke banyak penerima/konfirmasi-pesanan.html
+++ b/1 pengirim ke banyak penerima/konfirmasi-pesanan.html
@@ -104,7 +104,7 @@
                             <p class="text-[14px] font-[500]">14:00   13 Desember</p>
                         </div>
 
-                        <div class="bg-[#FF0F0F] px-[10px] items-center flex text-white h-[75px] rounded-r-lg">
+                        <div class="bg-[#FF0F0F] px-[10px] items-center flex text-white h-[75px] rounded-r-lg cursor-pointer">
                             <p>Hapus</p>
                         </div>
                     </div>
