--- a/banyak pengirim ke satu penerima/data-pengirim.html
+++ b/banyak pengirim ke satu penerima/data-pengirim.html
@@ -138,6 +138,7 @@
                 <div class="h-[98px] w-[343px] flex flex-col mt-[18px]  ml-[20px]">
                     <label for="jenisBarang" class="">Jenis Barang</label>
                     <select name="jenisBarang" id="jenisBarang" class="border border-[#E7E7E7] rounded-md px-[10px] py-[5px] mt-2">
+                        <option value="" disabled selected hidden class="text-[#5F5F5F]">Pilih Jenis</option>
                         <option value="makananMinuman">Makanan / Minuman</option>
                         <option value="pakaian">Pakaian</option>
                         <option value="barangElektronik">Barang Elektronik</option>
