--- a/1 pengirim ke banyak penerima/data-penerima.html
+++ b/1 pengirim ke banyak penerima/data-penerima.html
@@ -682,41 +682,41 @@
             <!--Modal body-->
             <div class="relative p-4 flex flex-col justify-center items-center">
                 <div class="flex mb-[10px]">
-                    <div class="border border-[#EAEAEA] rounded-lg mr-[10px] w-[332px]">
+                    <div class="border border-[#EAEAEA] rounded-lg mr-[10px] w-[332px] cursor-pointer">
                         <p class="text-[12px] text-[#676767] font-[400] py-[10px] px-[16px]">Jl. Purbasari No.19, Cipageran, Cimahi Utara, Kota Cimahi, Jawa Barat.</p>
                     </div>
 
-                    <div class="border border-[#EAEAEA] rounded-lg w-[332px]">
-                        <p class="text-[12px] text-[#676767] font-[400] py-[10px] px-[16px]">Jl. Purbasari No.19, Cipageran, Cimahi Utara, Kota Cimahi, Jawa Barat.</p>
-                    </div>
-                </div>
-
-                <div class="flex mb-[10px]">
-                    <div class="border border-[#EAEAEA] rounded-lg mr-[10px] w-[332px]">
-                        <p class="text-[12px] text-[#676767] font-[400] py-[10px] px-[16px]">Jl. Purbasari No.19, Cipageran, Cimahi Utara, Kota Cimahi, Jawa Barat.</p>
-                    </div>
-
-                    <div class="border border-[#EAEAEA] rounded-lg w-[332px]">
+                    <div class="border border-[#EAEAEA] rounded-lg w-[332px] cursor-pointer">
                         <p class="text-[12px] text-[#676767] font-[400] py-[10px] px-[16px]">Jl. Purbasari No.19, Cipageran, Cimahi Utara, Kota Cimahi, Jawa Barat.</p>
                     </div>
                 </div>
 
                 <div class="flex mb-[10px]">
-                    <div class="border border-[#EAEAEA] rounded-lg mr-[10px] w-[332px]">
+                    <div class="border border-[#EAEAEA] rounded-lg mr-[10px] w-[332px] cursor-pointer">
                         <p class="text-[12px] text-[#676767] font-[400] py-[10px] px-[16px]">Jl. Purbasari No.19, Cipageran, Cimahi Utara, Kota Cimahi, Jawa Barat.</p>
                     </div>
 
-                    <div class="border border-[#EAEAEA] rounded-lg w-[332px]">
+                    <div class="border border-[#EAEAEA] rounded-lg w-[332px] cursor-pointer">
+                        <p class="text-[12px] text-[#676767] font-[400] py-[10px] px-[16px]">Jl. Purbasari No.19, Cipageran, Cimahi Utara, Kota Cimahi, Jawa Barat.</p>
+                    </div>
+                </div>
+
+                <div class="flex mb-[10px]">
+                    <div class="border border-[#EAEAEA] rounded-lg mr-[10px] w-[332px] cursor-pointer">
+                        <p class="text-[12px] text-[#676767] font-[400] py-[10px] px-[16px]">Jl. Purbasari No.19, Cipageran, Cimahi Utara, Kota Cimahi, Jawa Barat.</p>
+                    </div>
+
+                    <div class="border border-[#EAEAEA] rounded-lg w-[332px] cursor-pointer">
                         <p class="text-[12px] text-[#676767] font-[400] py-[10px] px-[16px]">Jl. Purbasari No.19, Cipageran, Cimahi Utara, Kota Cimahi, Jawa Barat.</p>
                     </div>
                 </div>
                 
                 <div class="flex mb-[10px]">
-                    <div class="border border-[#EAEAEA] rounded-lg mr-[10px] w-[332px]">
+                    <div class="border border-[#EAEAEA] rounded-lg mr-[10px] w-[332px] cursor-pointer">
                         <p class="text-[12px] text-[#676767] font-[400] py-[10px] px-[16px]">Jl. Purbasari No.19, Cipageran, Cimahi Utara, Kota Cimahi, Jawa Barat.</p>
                     </div>
 
-                    <div class="border border-[#EAEAEA] rounded-lg w-[332px]">
+                    <div class="border border-[#EAEAEA] rounded-lg w-[332px] cursor-pointer">
                         <p class="text-[12px] text-[#676767] font-[400] py-[10px] px-[16px]">Jl. Purbasari No.19, Cipageran, Cimahi Utara, Kota Cimahi, Jawa Barat.</p>
                     </div>
                 </div>
