--- a/Pilih-jenis-pengiriman.html
+++ b/Pilih-jenis-pengiriman.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.tailwindcss.com"></script>
+    <script src="./Landing-page.css"></script>
     <title>Document</title>
 </head>
 <body>
@@ -34,10 +35,10 @@
     <div class="flex flex-col justify-center items-center mt-[50px]">
         <p class="text-[#2D71B4] text-[40px] font-[600] mb-[10px]">Pilih Jenis Pengiriman</p>   
         <hr class="w-[640px] border border-[#2D71B4] mb-[30px]">
-        <div class="flex">
+        <div class="flex flex-wrap justify-center items-center">
 
             <a href="./1 pengirim 1 penerima/1pengirim-1penerima.html">
-                <div class="bg-[#A5A5A5] p-[20px] rounded-lg text-white font-[600] text-justify hover:bg-[#2D71B4] cursor-pointer mr-[20px] w-[283px] h-[231px]">
+                <div class="bg-[#A5A5A5] p-[20px] rounded-lg text-white font-[600] text-justify hover:bg-[#2D71B4] cursor-pointer mr-[20px] w-[283px] h-[231px] mt-2">
                     <div class="h-[123px] bg-white rounded-lg">
                         <img src="./assets/pengiriman/one-to-one.png" alt="assets-kuy" class=" p-[16px]">
                     </div>
@@ -46,7 +47,7 @@
             </a>
 
             <a href="./1 pengirim ke banyak penerima/data-pengirim.html">
-                <div class="bg-[#A5A5A5] p-[20px] rounded-lg text-white font-[600] text-justify hover:bg-[#2D71B4] cursor-pointer mr-[20px] w-[283px] h-[231px]">
+                <div class="bg-[#A5A5A5] p-[20px] rounded-lg text-white font-[600] text-justify hover:bg-[#2D71B4] cursor-pointer mr-[20px] w-[283px] h-[231px] mt-2">
                     <div class="h-[123px] bg-white rounded-lg">
                         <img src="./assets/pengiriman/one-to-many.png" alt="assets-kuy" class=" p-[16px]">
                     </div>
@@ -55,7 +56,7 @@
             </a>
 
             <a href="./banyak pengirim ke satu penerima/data-pengirim.html">
-                <div class="bg-[#A5A5A5] p-[20px] rounded-lg text-white font-[600] text-justify hover:bg-[#2D71B4] cursor-pointer mr-[20px] w-[283px] h-[231px]">
+                <div class="bg-[#A5A5A5] p-[20px] rounded-lg text-white font-[600] text-justify hover:bg-[#2D71B4] cursor-pointer mr-[20px] w-[283px] h-[231px] mt-2">
                     <div class="h-[123px] bg-white rounded-lg">
                         <img src="./assets/pengiriman/many-to-one.png" alt="assets-kuy" class=" p-[16px]">
                     </div>
