--- a/1 pengirim 1 penerima/1pengirim-1penerima.html
+++ b/1 pengirim 1 penerima/1pengirim-1penerima.html
@@ -89,18 +89,18 @@
                 </div>
             </div>
 
-            <div class="flex ">
+            <div class="flex flex-wrap justify-center items-center">
                 <div class="flex flex-col w-[343px]">
                     <label for="teleponPengirim">No Telepon Pengirim</label>
                     <input type="text" name="teleponPengirim" id="teleponPengirim" placeholder="08xxxxx" class="border border-[#E7E7E7] rounded-md px-[10px] py-[5px] mt-2">
                 </div>
-                <div class="flex flex-col w-[343px] ml-[20px]">
+                <div class="flex flex-col w-[343px] lg:ml-[20px] md:ml-[15px]">
                     <label for="namaPengirim">Nama Pengirim</label>
                     <input type="text" name="namaPengirim" id="namaPengirim" placeholder="Isi Nama" class="border border-[#E7E7E7] rounded-md px-[10px] py-[5px] mt-2">
                 </div>
             </div>
 
-            <div class="flex mt-[20px]">
+            <div class="flex mt-[20px] flex-wrap justify-center">
                 <div class="flex flex-col w-[343px]">
                     <div class="flex justify-between">
                         <label for="alamatPenerima">Alamat</label>
@@ -115,13 +115,13 @@
                     </div>
                     <input type="text" name="alamatPenerima" id="alamatPenerima" class="h-[66px] border border-[#E7E7E7] rounded-md mt-2 px-[10px] py-[5px] " placeholder="Nama Kota, Jalan">
                 </div>
-                <div class="flex flex-col w-[343px] ml-[20px]">
+                <div class="flex flex-col w-[343px] lg:ml-[20px] md:ml-[15px]">
                     <label for="patokan" class="mt-[20px]">Patokan</label>
                     <input type="text" name="patokan" id="patokan" placeholder="Opsional" class="border border-[#E7E7E7] rounded-md px-[10px] py-[5px] mt-2">
                 </div>
             </div>
 
-            <div class="flex">
+            <div class="flex flex-wrap justify-center">
                 <div class="border border-[#E7E7E7] rounded-md mt-[20px] h-[97px] flex justify-center w-[343px]">
                     <a href="" class="flex justify-center items-center">
                         <img src="../assets/pengiriman/location.png" alt="icon-location-kuy">
@@ -136,7 +136,7 @@
                     </a>
                 </div>
 
-                <div class="h-[98px] w-[343px] flex flex-col mt-[18px]  ml-[20px]">
+                <div class="h-[98px] w-[343px] flex flex-col mt-[18px] lg:ml-[20px] md:ml-[15px]">
                     <label for="jenisBarang" class="">Jenis Barang</label>
                     <select name="jenisBarang" id="jenisBarang" class="border border-[#E7E7E7] rounded-md px-[10px] py-[5px] mt-2">
                         <option value="" disabled selected hidden class="text-[#5F5F5F]">Pilih Jenis</option>
@@ -149,8 +149,8 @@
                 </div>
             </div>
 
-            <div class="flex">
-                <div class="w-[343px] h-[98px] border border-[#2D71B4] rounded-md px-[10px] py-[6px] my-[20px] flex relative">
+            <div class="flex flex-wrap justify-center">
+                <div class="w-[343px] h-[98px] border border-[#2D71B4] rounded-md px-[10px] py-[6px] lg:my-[20px] md:my-[15px] flex relative">
                     <div class="flex flex-col justify-between">
                         <div class="flex-col flex">
                             <p class="text-[12px]">Pilih Ukuran Barang</p>
@@ -177,9 +177,9 @@
                 </div>
             </div>
 
-            <div class="flex">
+            <div class="flex flex-wrap justify-center">
 
-                <div class="flex flex-col">
+                <div class="flex flex-col justify-center">
                     <div class="w-[343px] h-[98px] border border-[#2D71B4] rounded-md px-[10px] py-[6px] relative">
                         <div class="flex flex-col">
                             <p class="text-[12px]">Pilih Layanan & Waktu penjemputan</p>
@@ -193,7 +193,7 @@
                                 class="w-[113px] border border-[#2D71B4] rounded-3xl mt-[10px] text-[#2D71B4] text-[12px]">Pilih Layanan</button>
                         </div>
 
-                        <div class="flex flex-col justify-end">
+                        <div class="flex flex-col justify-end ">
                             <img src="../assets/pengiriman/Ellipse.png" alt="icon-ellipse-kuy" class="absolute right-0 bottom-0 rounded-br-md">
                             <img src="../assets/pengiriman/motor.png" alt="icon-motor-kuy" class="w-[65.92px] h-[67px] absolute right-2">
                         </div>
