--- a/1 pengirim 1 penerima/data-penerima.html
+++ b/1 pengirim 1 penerima/data-penerima.html
@@ -89,18 +89,18 @@
                 </div>
             </div>
 
-            <div class="flex ">
+            <div class="flex flex-wrap">
                 <div class="flex flex-col w-[343px]">
                     <label for="teleponPenerima">Nomor Telepon Penerima</label>
                     <input type="text" name="teleponPenerima" id="teleponPenerima" placeholder="08xxxxx" class="border border-[#E7E7E7] rounded-md px-[10px] py-[5px] mt-2">
                 </div>
-                <div class="flex flex-col w-[343px] ml-[20px]">
+                <div class="flex flex-col w-[343px] lg:ml-[20px] md:ml-[15px]">
                     <label for="namaPenerima">Nama Penerima</label>
                     <input type="text" name="namaPenerima" id="namaPenerima" placeholder="08xxxxx" class="border border-[#E7E7E7] rounded-md px-[10px] py-[5px] mt-2">
                 </div>
             </div>
 
-            <div class="flex mt-[20px]">
+            <div class="flex mt-[20px] flex-wrap">
                 <div class="flex flex-col w-[343px]">
                     <div class="flex justify-between">
                         <label for="alamatPenerima">Alamat</label>
@@ -115,7 +115,7 @@
                     </div>
                     <input type="text" name="alamatPenerima" id="alamatPenerima" class="h-[66px] border border-[#E7E7E7] rounded-md mt-2 px-[10px] py-[5px] " placeholder="Nama Kota, Jalan">
                 </div>
-                <div class="flex flex-col w-[343px] ml-[20px]">
+                <div class="flex flex-col w-[343px] lg:ml-[20px] md:ml-[15px]">
                     <label for="namaPenerima">Patokan</label>
                     <input type="text" name="patokan" id="patokan" placeholder="Opsional" class="border border-[#E7E7E7] rounded-md px-[10px] py-[5px] mt-2">
                 </div>
