--- a/Cek-paket.html
+++ b/Cek-paket.html
@@ -52,11 +52,13 @@
         </div>
 
         <!-- search bar -->
-        <div class="ml-[60px] card bg-white mt-[38px] w-[1120px] flex flex-col justify-center p-[20px] rounded-md">
-            <p class="text-[#2D71B4] text-[30px] font-[600]">Lacak Paket Kuy</p>
-            <p class="text-[16px] font-[600] mb-2">Kode Resi :</p>
+        <div class="card bg-white mt-[38px] w-[1120px] flex flex-col justify-center lg:ml-[65px] p-[20px] rounded-md">
+            <div class="flex flex-col justify-center">
+                <p class="text-[#2D71B4] text-[30px] font-[600]">Lacak Paket Kuy</p>
+                <p class="text-[16px] font-[600] mb-2">Kode Resi :</p>
+            </div>
 
-            <div class="flex">
+            <div class="flex justify-center">
                 <input type="text" name="search" id="search" placeholder="Masukan Kode Resi, contoh: xxxxxxx , xxxxxxx , xxxxxxx" class="w-[720px] rounded-md border border-[#606060] mr-[20px]">
                 <button class="bg-[#2D71B4] text-white py-[12px] px-[118px] rounded-md text-[18px] font-[600]">Cek Paket</button>
             </div>
@@ -64,11 +66,11 @@
         </div>
         
         <!-- card -->
-        <div class="flex mb-[160px]">
+        <div class="flex mb-[160px] flex-wrap justify-center">
             <!-- card1 -->
             <div id="accordionExample">
                 <div
-                class="w-[540px] m-[20px] rounded-t-lg border border-neutral-200 bg-white ml-[60px] mt-[48px]">
+                class="w-[540px] m-[20px] rounded-t-lg border border-neutral-200 bg-white mt-[48px]">
                 <h2 class="mb-0" id="headingOne">
                     <button
                     class="group relative flex w-full items-center rounded-t-[15px] bg-white px-5 py-4 text-left text-base text-neutral-800 transition [overflow-anchor:none] hover:z-[2] focus:z-[3] focus:outline-none dark:bg-neutral-800 dark:text-white [&:not([data-te-collapse-collapsed])]:bg-white [&:not([data-te-collapse-collapsed])]:text-primary [&:not([data-te-collapse-collapsed])]:[box-shadow:inset_0_-1px_0_rgba(229,231,235)] dark:[&:not([data-te-collapse-collapsed])]:bg-neutral-800 dark:[&:not([data-te-collapse-collapsed])]:text-primary-400 dark:[&:not([data-te-collapse-collapsed])]:[box-shadow:inset_0_-1px_0_rgba(75,85,99)]" type="button" data-te-collapse-init data-te-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
@@ -252,7 +254,7 @@
             <!-- card2 -->
             <div id="accordionExample">
                 <div
-                class="w-[540px] m-[20px] rounded-t-lg border border-neutral-200 bg-white ml-[30px] mt-[48px]">
+                class="w-[540px] m-[20px] rounded-t-lg border border-neutral-200 bg-white mt-[48px]">
                 <h2 class="mb-0" id="headingTwo">
                     <button
                     class="group relative flex w-full items-center rounded-t-[15px] bg-white px-5 py-4 text-left text-base text-neutral-800 transition [overflow-anchor:none] hover:z-[2] focus:z-[3] focus:outline-none dark:bg-neutral-800 dark:text-white [&:not([data-te-collapse-collapsed])]:bg-white [&:not([data-te-collapse-collapsed])]:text-primary [&:not([data-te-collapse-collapsed])]:[box-shadow:inset_0_-1px_0_rgba(229,231,235)] dark:[&:not([data-te-collapse-collapsed])]:bg-neutral-800 dark:[&:not([data-te-collapse-collapsed])]:text-primary-400 dark:[&:not([data-te-collapse-collapsed])]:[box-shadow:inset_0_-1px_0_rgba(75,85,99)]" type="button" data-te-collapse-init data-te-target="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo">
