--- a/banyak pengirim ke satu penerima/data-penerima.html
+++ b/banyak pengirim ke satu penerima/data-penerima.html
@@ -77,7 +77,7 @@
     <div class="p-[30px] mt-[20px] text-[14px] font-[600] flex justify-center rounded-md text-[#000000]">
         <div class="flex flex-col justify-center bg-white p-[30px] rounded-lg">
             <div class="flex mb-[10px]">
-                <img src="../assets/pengiriman/Penerima.png" alt="icon-penerima-kuy">
+                <img src="../assets/pengiriman/Penerima.png" alt="icon-penerima-kuy" class="w-[36px] h-[36px]">
                 <p class="text-[24px] font-[600] ml-[10px] ">Detail Penerima</p>
             </div>
 
@@ -89,7 +89,7 @@
                 </div>
             </div>
 
-            <div class="flex ">
+            <div class="flex flex-wrap">
                 <div class="flex flex-col w-[343px]">
                     <label for="teleponPenerima">Nomor Telepon Penerima</label>
                     <input type="text" name="teleponPenerima" id="teleponPenerima" placeholder="08xxxxx" class="border border-[#E7E7E7] rounded-md px-[10px] py-[5px] mt-2">
@@ -100,7 +100,7 @@
                 </div>
             </div>
 
-            <div class="flex mt-[20px]">
+            <div class="flex mt-[20px] flex-wrap">
                 <div class="flex flex-col w-[343px]">
                     <div class="flex justify-between">
                         <label for="alamatPenerima">Alamat</label>
@@ -121,7 +121,7 @@
                 </div>
             </div>
 
-            <div class="border border-[#E7E7E7] rounded-md mt-[20px] h-[97px] flex justify-center w-[343px]">
+            <div class="border border-[#E7E7E7] rounded-md mt-[20px] h-[97px] flex justify-center w-[343px] flex-wrap">
                 <a href="" class="flex justify-center items-center">
                     <img src="../assets/pengiriman/location.png" alt="icon-location-kuy">
                     <a 
