--- a/banyak pengirim ke satu penerima/data-pengirim.html
+++ b/banyak pengirim ke satu penerima/data-pengirim.html
@@ -89,18 +89,18 @@
                 </div>
             </div>
 
-            <div class="flex ">
+            <div class="flex flex-wrap">
                 <div class="flex flex-col w-[343px]">
                     <label for="teleponPengirim">No Telepon Pengirim</label>
                     <input type="text" name="teleponPengirim" id="teleponPengirim" placeholder="08xxxxx" class="border border-[#E7E7E7] rounded-md px-[10px] py-[5px] mt-2">
                 </div>
-                <div class="flex flex-col w-[343px] ml-[20px]">
+                <div class="flex flex-col w-[343px] lg:ml-[20px] md:ml-[15px]">
                     <label for="namaPengirim">Nama Pengirim</label>
                     <input type="text" name="namaPengirim" id="namaPengirim" placeholder="Isi Nama" class="border border-[#E7E7E7] rounded-md px-[10px] py-[5px] mt-2">
                 </div>
             </div>
 
-            <div class="flex mt-[20px]">
+            <div class="flex mt-[20px] flex-wrap">
                 <div class="flex flex-col w-[343px]">
                     <div class="flex justify-between">
                         <label for="alamatPenerima">Alamat</label>
@@ -115,13 +115,13 @@
                     </div>
                     <input type="text" name="alamatPenerima" id="alamatPenerima" class="h-[66px] border border-[#E7E7E7] rounded-md mt-2 px-[10px] py-[5px] " placeholder="Nama Kota, Jalan">
                 </div>
-                <div class="flex flex-col w-[343px] ml-[20px]">
+                <div class="flex flex-col w-[343px] lg:ml-[20px] md:ml-[15px]">
                     <label for="patokan" class="mt-[20px]">Patokan</label>
                     <input type="text" name="patokan" id="patokan" placeholder="Opsional" class="border border-[#E7E7E7] rounded-md px-[10px] py-[5px] mt-2">
                 </div>
             </div>
 
-            <div class="flex">
+            <div class="flex flex-wrap">
                 <div class="border border-[#E7E7E7] rounded-md mt-[20px] h-[97px] flex justify-center w-[343px]">
                     <a href="" class="flex justify-center items-center">
                         <img src="../assets/pengiriman/location.png" alt="icon-location-kuy">
@@ -135,7 +135,7 @@
                     </a>
                 </div>
 
-                <div class="h-[98px] w-[343px] flex flex-col mt-[18px]  ml-[20px]">
+                <div class="h-[98px] w-[343px] flex flex-col mt-[18px]  lg:ml-[20px] md:ml-[15px]">
                     <label for="jenisBarang" class="">Jenis Barang</label>
                     <select name="jenisBarang" id="jenisBarang" class="border border-[#E7E7E7] rounded-md px-[10px] py-[5px] mt-2">
                         <option value="" disabled selected hidden class="text-[#5F5F5F]">Pilih Jenis</option>
@@ -148,7 +148,7 @@
                 </div>
             </div>
 
-            <div class="flex">
+            <div class="flex flex-wrap">
                 <div class="w-[343px] h-[98px] border border-[#2D71B4] rounded-md px-[10px] py-[6px] my-[20px] flex relative">
                     <div class="flex flex-col justify-between">
                         <div class="flex-col flex">
@@ -176,7 +176,7 @@
                 </div>
             </div>
 
-            <div class="flex">
+            <div class="flex flex-wrap">
 
                 <div class="flex flex-col">
                     <div class="w-[343px] h-[98px] border border-[#2D71B4] rounded-md px-[10px] py-[6px] relative">
