--- a/Landing-page.html
+++ b/Landing-page.html
@@ -142,7 +142,7 @@
                     <span class="text-[#4E4E4E] text-[30px] font-[600] mb-[12px]">Medicine</span>
                 </div>
                 <span class="text-[#5F5F5F] text-[16px] font-[400] mb-[12px]">Antar obat dari rumah sakit ke tempat kamu</span>
-                <div class="flex flex-row items-center">
+                <div class="flex flex-row items-center cursor-pointer">
                     <span class="text-[#0065C1] text-[20px] font-[600] mr-2">Lebih Lanjut</span>
                     <img src="./assets/i-arrow.png" alt="icon-arrow-kuy" class="w-[1.87rem] h-[1.87rem]">
                 </div>
