--- a/Cakupan-wilayah.html
+++ b/Cakupan-wilayah.html
@@ -37,19 +37,19 @@
             <p class="text-[#2D71B4] text-[30px] font-[600] mb-[20px]">Cakupan Wilayah</p>
             <input type="text" name="search" id="search" placeholder="Cari alamat disini" class="border-[#E0E0E0] border w-[265px] rounded-md p-[10px]">
             <span class="text-[#818181] text-[12px] font-[500] mb-[10px] pt-2">Sering Dicari :</span>
-            <div class="flex mb-[20px]">
+            <div class="flex mb-[20px] cursor-pointer cursor-pointer">
                 <img src="./assets/i-location.png" alt="icon-location-kuy" class="w-[21px] h-[21px] mr-[10px]">
                 <p class="w-[200px] font-[500] text-[14px]">Bandung, Kota Bandung, Jawa Barat, Indonesia</p>
             </div>
-            <div class="flex mb-[20px]">
+            <div class="flex mb-[20px] cursor-pointer">
                 <img src="./assets/i-location.png" alt="icon-location-kuy" class="w-[21px] h-[21px] mr-[10px]">
                 <p class="w-[200px] font-[500] text-[14px]">Bandung, Kota Bandung, Jawa Barat, Indonesia</p>
             </div>
-            <div class="flex mb-[20px]">
+            <div class="flex mb-[20px] cursor-pointer">
                 <img src="./assets/i-location.png" alt="icon-location-kuy" class="w-[21px] h-[21px] mr-[10px]">
                 <p class="w-[200px] font-[500] text-[14px]">Bandung, Kota Bandung, Jawa Barat, Indonesia</p>
             </div>
-            <div class="flex mb-[20px]">
+            <div class="flex mb-[20px] cursor-pointer">
                 <img src="./assets/i-location.png" alt="icon-location-kuy" class="w-[21px] h-[21px] mr-[10px]">
                 <p class="w-[200px] font-[500] text-[14px]">Bandung, Kota Bandung, Jawa Barat, Indonesia</p>
             </div>
